<resources>
    <string name="app_name">Forex test</string>
    <string name="action_settings">Settings</string>
    <string name="add_subscription">No subscriptions added. Add one by clicking button below.</string>
    <string name="watch_bg">Watch updates in background</string>
    <string name="unwatch_bg">Unwatch background updates</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name">Main service</string>
    <string name="channel_description">Notification of service, listening updates</string>
    <string name="bid">Bid</string>
    <string name="bid_size">Bid size</string>
    <string name="ask">Ask</string>
    <string name="ask_size">Ask size</string>
    <string name="daily_charge">Daily charge</string>
    <string name="daily_charge_perc">Daily charge percents</string>
    <string name="last_price">Last price</string>
    <string name="volume">Volume</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="item_view">Item view</string>
</resources>
